			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------


=================================
VERSION 5.5.35 (October 19, 2005)
=================================

  * FIXED: Bug#104: float formatting.  Holger Kanwischer.

  * FIXED: Memory leak in sformat/3.  Mike Elston.

=================================
VERSION 5.5.34 (October 11, 2005)
=================================

  * PORT: Deal with systems that breakdown arguments of #! scripts.

  * ADDED: message_queue_size/2.  Woon Kiong.

  * FIXED: Singleton warning for variables with Unicode name.  Dmitry.

  * PORT: Bug#90: parallel make.  Mike Frysinger.

  * PORT: Bug#97: Some packages configure issues.  Mike Frysinger.

  * FIXED: abs/1 for large integers and rationals.  Mike Elston.

===================================
VERSION 5.5.33 (September 30, 2005)
===================================

  * FIXED: when/2: unifyable -->unifiable.  Grzegorz Chrupała.

  * ADDED: Allow hooking into output of library(debug).  Added XPCE Gui
    frontend for the debugging library called with prolog_debug_monitor/0.

  * FIXED: Prevent recursive calling of Sclose().

  * ADDED: Win32: current_prolog_flag(pid, Pid).

===================================
VERSION 5.5.32 (September 26, 2005)
===================================

  * FIXED: Typo in new PL_unify_term() conversions.

  * PORT: Allow for CFLAGS=xx ./configure.  Use LDFLAGS when building
    plrc.  Tim Brown.

  * FIXED: Initialisation bug in format/3.  Sergey Tikhonov.

  * FIXED: upcase_atom/2 and downcase_atom/2 for atoms holding characters
    in the range 128..255 but not > 255 as well as for 8-bit atoms whose
    converted version does not fit in 8-bit.  Grzegorz Chrupała.


===================================
VERSION 5.5.31 (September 19, 2005)