@@ -173,8 +173,8 @@ between  16  and  32  bits  machines (arities on 16 bits machines are 16
 bits) as well as machines with different byte order.
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-#define LOADVERSION 41			/* load all versions later >= X */
-#define VERSION 41			/* save version number */
+#define LOADVERSION 42			/* load all versions later >= X */
+#define VERSION 42			/* save version number */
 #define QLFMAGICNUM 0x716c7374		/* "qlst" on little-endian machine */
 
 #define XR_REF     0			/* reference to previous */
